--- a/osbourne-explorer/OverlayViewController.xib
+++ b/osbourne-explorer/OverlayViewController.xib
@@ -21,6 +21,30 @@
                     <animations/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
+                <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYL-RX-t7o">
+                    <rect key="frame" x="279" y="442" width="33" height="30"/>
+                    <animations/>
+                    <state key="normal" title="Ovrl."/>
+                    <connections>
+                        <action selector="overlaysToggleAction:" destination="-1" eventType="touchUpInside" id="fUD-8o-HOc"/>
+                    </connections>
+                </button>
+                <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TIn-Sh-KdM">
+                    <rect key="frame" x="264" y="404" width="48" height="30"/>
+                    <animations/>
+                    <state key="normal" title="Semitr."/>
+                    <connections>
+                        <action selector="semitransparentToggleAction:" destination="-1" eventType="touchUpInside" id="giM-63-w7Z"/>
+                    </connections>
+                </button>
+                <button contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npg-Ag-0YH">
+                    <rect key="frame" x="220" y="442" width="51" height="30"/>
+                    <animations/>
+                    <state key="normal" title="Sat/top"/>
+                    <connections>
+                        <action selector="mapTypeToggleAction:" destination="-1" eventType="touchUpInside" id="hhS-iZ-40L"/>
+                    </connections>
+                </button>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
