--- a/osbourne-explorer/Base.lproj/Main.storyboard
+++ b/osbourne-explorer/Base.lproj/Main.storyboard
@@ -375,37 +375,6 @@
             </objects>
             <point key="canvasLocation" x="1298" y="730"/>
         </scene>
-        <!--overlay info-->
-        <scene sceneID="yNi-kV-DmE">
-            <objects>
-                <viewController title="overlay info" id="9R5-lw-Uc1" customClass="ForcedNavbarViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="E5S-v1-B29"/>
-                        <viewControllerLayoutGuide type="bottom" id="CMX-t1-5NX"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="MvU-97-F5u">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="foobar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftC-rX-vhR">
-                                <rect key="frame" x="20" y="72" width="50" height="21"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4ae-Yz-EeH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1298" y="730"/>
-        </scene>
         <!--new overlay VC-->
         <scene sceneID="IIE-QB-Ovw">
             <objects>
@@ -424,12 +393,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7TL-Az-ten" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1298" y="1277"/>
+            <point key="canvasLocation" x="700" y="1368"/>
         </scene>
         <!--overlay info-->
         <scene sceneID="Ls5-ab-5Ja">
             <objects>
-                <viewController title="overlay info" id="DBZ-W6-AQD" customClass="ForcedNavbarViewController" sceneMemberID="viewController">
+                <viewController title="overlay info" id="DBZ-W6-AQD" customClass="GroundOverlayInfoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="V58-g7-9dV"/>
                         <viewControllerLayoutGuide type="bottom" id="ETI-LD-NaU"/>
@@ -438,13 +407,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AzT-Iu-DPU">
-                                <rect key="frame" x="20" y="101" width="240" height="128"/>
-                                <animations/>
-                                <connections>
-                                    <segue destination="bAe-RL-bDa" kind="embed" id="xbO-Ly-FvJ"/>
-                                </connections>
-                            </containerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="foobar overlay here:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H0M-6X-2kk">
                                 <rect key="frame" x="20" y="72" width="153" height="21"/>
                                 <animations/>
@@ -452,6 +414,13 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rou-5k-tFi">
+                                <rect key="frame" x="0.0" y="101" width="320" height="188"/>
+                                <animations/>
+                                <connections>
+                                    <segue destination="2PN-gc-90I" kind="embed" id="Kai-Xk-ftl"/>
+                                </connections>
+                            </containerView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -465,12 +434,12 @@
             <point key="canvasLocation" x="1298" y="730"/>
         </scene>
         <!--Overlay View Controller-->
-        <scene sceneID="OO2-57-ur2">
+        <scene sceneID="vfb-IQ-n5K">
             <objects>
-                <viewController id="bAe-RL-bDa" customClass="OverlayViewController" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nz2-BP-SsF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="2PN-gc-90I" customClass="OverlayViewController" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TAT-Oo-k1n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1691" y="554"/>
+            <point key="canvasLocation" x="1662" y="700"/>
         </scene>
     </scenes>
 </document>
