--- a/osbourne-explorer/OverlayViewController.xib
+++ b/osbourne-explorer/OverlayViewController.xib
@@ -22,11 +22,11 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FYL-RX-t7o">
-                    <rect key="frame" x="279" y="442" width="33" height="30"/>
+                    <rect key="frame" x="270" y="440" width="50" height="40"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="33" id="52f-lk-jJU"/>
-                        <constraint firstAttribute="height" constant="30" id="hFv-Or-5F1"/>
+                        <constraint firstAttribute="width" constant="50" id="52f-lk-jJU"/>
+                        <constraint firstAttribute="height" constant="40" id="hFv-Or-5F1"/>
                     </constraints>
                     <state key="normal" title="Ovrl."/>
                     <connections>
@@ -34,11 +34,11 @@
                     </connections>
                 </button>
                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TIn-Sh-KdM">
-                    <rect key="frame" x="264" y="412" width="48" height="30"/>
+                    <rect key="frame" x="270" y="400" width="50" height="40"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="g7v-5p-3CE"/>
-                        <constraint firstAttribute="height" constant="30" id="pLD-eB-AwR"/>
+                        <constraint firstAttribute="width" constant="50" id="g7v-5p-3CE"/>
+                        <constraint firstAttribute="height" constant="40" id="pLD-eB-AwR"/>
                     </constraints>
                     <state key="normal" title="Semitr."/>
                     <connections>
@@ -46,11 +46,11 @@
                     </connections>
                 </button>
                 <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="npg-Ag-0YH">
-                    <rect key="frame" x="220" y="442" width="51" height="30"/>
+                    <rect key="frame" x="211" y="440" width="51" height="40"/>
                     <animations/>
                     <constraints>
                         <constraint firstAttribute="width" constant="51" id="8ev-LR-cyC"/>
-                        <constraint firstAttribute="height" constant="30" id="xcs-1t-gBm"/>
+                        <constraint firstAttribute="height" constant="40" id="xcs-1t-gBm"/>
                     </constraints>
                     <state key="normal" title="Sat/top"/>
                     <connections>
@@ -58,10 +58,10 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N48-9l-KRF">
-                    <rect key="frame" x="8" y="412" width="30" height="30"/>
+                    <rect key="frame" x="8" y="400" width="30" height="40"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="gDG-Hx-AMK"/>
+                        <constraint firstAttribute="height" constant="40" id="gDG-Hx-AMK"/>
                         <constraint firstAttribute="width" constant="30" id="nWo-rn-iXW"/>
                     </constraints>
                     <state key="normal" title="GPS"/>
@@ -73,12 +73,12 @@
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="FYL-RX-t7o" secondAttribute="bottom" constant="8" id="WKU-Ee-9IQ"/>
+                <constraint firstAttribute="bottom" secondItem="FYL-RX-t7o" secondAttribute="bottom" id="WKU-Ee-9IQ"/>
                 <constraint firstItem="FYL-RX-t7o" firstAttribute="trailing" secondItem="TIn-Sh-KdM" secondAttribute="trailing" id="WmF-7U-Sbf"/>
                 <constraint firstAttribute="bottom" secondItem="38N-Bs-FRR" secondAttribute="bottom" id="Yps-MB-290"/>
                 <constraint firstItem="npg-Ag-0YH" firstAttribute="top" secondItem="TIn-Sh-KdM" secondAttribute="bottom" id="dnu-Ez-weJ"/>
                 <constraint firstAttribute="trailing" secondItem="38N-Bs-FRR" secondAttribute="trailing" id="gZp-QZ-bOw"/>
-                <constraint firstAttribute="trailing" secondItem="FYL-RX-t7o" secondAttribute="trailing" constant="8" id="hUB-bE-zME"/>
+                <constraint firstAttribute="trailing" secondItem="FYL-RX-t7o" secondAttribute="trailing" id="hUB-bE-zME"/>
                 <constraint firstItem="38N-Bs-FRR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="o6v-Aj-2Hs"/>
                 <constraint firstItem="N48-9l-KRF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="pLd-cX-wBW"/>
                 <constraint firstItem="TIn-Sh-KdM" firstAttribute="centerY" secondItem="N48-9l-KRF" secondAttribute="centerY" id="pVS-JY-5Zd"/>
